BUG: Sorters on Expenses: blame, categories and Incomes: user columns were not working properly Action column must be full visible even if the expense/income is in the future

--- a/sources/desktop/resources/sass/extra.scss
+++ b/sources/desktop/resources/sass/extra.scss
@@ -31,7 +31,7 @@
 }
 
 .future-row {
-  td > .x-grid-cell-inner {
+  td:not([data-columnid^="actioncolumn"]) > .x-grid-cell-inner {
     opacity: 0.5;
   }
 }
